tests/ui/cast/unsupported-cast.stderr
error[E0606]: casting `f64` as `*const A` is invalid
  --> $DIR/unsupported-cast.rs:4:20
   |
LL |   println!("{:?}", 1.0 as *const A);
   |                    ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0606`.
